[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-pulse"
version = "0.1.0"
description = "Turn your RevenueCat Charts API data into actionable subscription health reports"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Finn", email = "finn@maduro.dev"}]
keywords = ["revenuecat", "subscription", "metrics", "analytics", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/heyfinn/rc-pulse"
"Bug Tracker" = "https://github.com/heyfinn/rc-pulse/issues"
Documentation = "https://github.com/heyfinn/rc-pulse#readme"

[project.scripts]
rc-pulse = "rc_pulse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rc_pulse*"]
